fixed issue with maze section collapsing on itself, re-organized maze styling file

--- a/src/styles/_Instructions.scss
+++ b/src/styles/_Instructions.scss
@@ -67,7 +67,7 @@
 }
 
 .formSubmitButton {
-    margin-bottom: 80px;
+    margin-bottom: 60px;
     font-size: 2.3rem;
     font-weight: bold;
     text-transform: uppercase;
