--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -3,6 +3,8 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 2px;
+    padding: 5px;
     background-color: $fontPrimary;
     color: $fontSecondary;
         a {
